--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ notifications:
       - hyun02.engineer@gmail.com
       - ngh3053@gmail.com
       - cyh905@gmail.com
-    on_success: always
+    on_success: never
     on_failure: always
