--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,19 @@ branches:
 
 python:
 #  - "2.7"
-#  - "3.3"
-#  - "3.4"
+  - "3.3"
+  - "3.4"
 # I think you have to minimally support the following 
   - "3.5"
-#  - "3.6"
+  - "3.6"
+
+
+matrix:
+  allow_failures:
+    - python: 3.3
+    - python: 3.4
+    - python: 3.6
+
 
 install:
   - sudo apt-get install python3-pip
