added install jpype for kma/kkma test

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ install:
   - pip3 install pytest-cov==2.4.0
   - pip3 install coveralls==1.1
 # - pip3 install codecov # If enabled
+  - pip3 install JPype1-py3>=0.5.5.1
 
 script:
   - python3 setup.py install
