테스트때문에 master 브랜치를 잠시 뺐습니다.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: required
 
 language: python
 
-branches:
-   only:
-     - master
+# branches:
+#    only:
+#      - master
 
 python:
 #  - "2.7"
