--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,7 @@ matrix:
 
 install:
   - sudo apt-get install python3-pip
-  - pip3 install pytest-cov==2.4.0
-  - pip3 install coveralls==1.1
-# - pip3 install codecov # If enabled
-  - pip3 install JPype1-py3>=0.5.5.1
+  - pip3 install -r pip-requirements.txt
 
 script:
   - python3 setup.py install
