kma new module init

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ dist/
 konlp.egg-info/
 web/_build
 
+
 # Test artifacts and coverage reports
 *.tox
 *.errs
@@ -40,7 +41,9 @@ coverage.xml
 *.bak
 
 # automatically built files for website
-web/api/*.rst
+# If we have to change this to the  uncommented status
+# For the test
+#web/api/*.rst
 
 # iPython notebooks
 
