--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,3 +1,8 @@
 # Test optional requirement
 pytest>=3.5.1
 JPype1-py3>=0.5.5.1
+pytest>=3.5.1
+JPype1-py3>=0.5.5.1
+numpy
+Cython==0.25.2
+jnius==1.1.0
