--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
 
 install:
   - sudo apt-get install python3-pip
+  - pip3 install cython
   - pip3 install -r pip-requirements.txt
 
 script:
